fix text align

--- a/src/styles/Welcome.module.css
+++ b/src/styles/Welcome.module.css
@@ -9,7 +9,7 @@
   font-weight: 500;
   color: #333;
   padding-top: 90px;
-  padding-left: 30px;
+  padding-left: 60px;
   padding-bottom: 90px;
 }
 
@@ -86,6 +86,7 @@
   font-size: 28px;
   font-family: Poppins, sans-serif;
   font-weight: 500;
+  text-align: left;
 }
 
 .description {
@@ -106,5 +107,6 @@
   margin-bottom: 0px;
   font-family: Poppins, sans-serif;
   font-weight: 500;
+  text-align: center;
 }
 
